--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
   </head>
   <body>
     <header>
-      <img src="https://github.com/hairness-dev/hairness.github.io/blob/main/Black%20Simple%20Outfit%20New%20Collection%20Email%20Header%20(1000%20x%20250%20piksel)%20(1).png?raw=true?raw=true?raw=true?raw=true?raw=true" alt="Header Gambar">
+      <img src="https://raw.githubusercontent.com/hairness-dev/hairness.github.io/main/Black%20Simple%20Outfit%20New%20Collection%20Email%20Header%20(1000%20x%20250%20piksel)%20(1).png" alt="Header Gambar">
     </header>
+  </body>
+</html>
