--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
   <head>
     <title>Halo Dunia</title>
     <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+
       header {
         text-align: center;
         background-color: #000000;
@@ -12,11 +18,38 @@
         max-width: 100%;
         height: auto;
       }
+
+      .button-container {
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        margin: 30px 0;
+        flex-wrap: wrap;
+      }
+
+      .button-container a {
+        background-color: #000;
+        color: #fff;
+        padding: 12px 24px;
+        text-decoration: none;
+        border-radius: 8px;
+        transition: background-color 0.3s;
+      }
+
+      .button-container a:hover {
+        background-color: #333;
+      }
     </style>
   </head>
   <body>
     <header>
       <img src="https://raw.githubusercontent.com/hairness-dev/hairness.github.io/main/Black%20Simple%20Outfit%20New%20Collection%20Email%20Header%20(1000%20x%20250%20piksel)%20(1).png" alt="Header Gambar">
     </header>
+
+    <div class="button-container">
+      <a href="https://maps.app.goo.gl/zPNjq5hGaSkjmGxd7">Hairness Samarinda</a>
+      <a href="#tentang">Tentang Kami</a>
+      <a href="https://wa.me/6282255553833>Kontak</a>
+    </div>
   </body>
 </html>
