--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="button-container">
       <a href="https://maps.app.goo.gl/zPNjq5hGaSkjmGxd7">Hairness Samarinda</a>
       <a href="#tentang">Tentang Kami</a>
-      <a href="https://wa.me/6282255553833>Kontak</a>
+      <a href="https://wa.me/6282255553833">Kontak</a>
     </div>
   </body>
 </html>
