--- a/index.html
+++ b/index.html
@@ -20,12 +20,18 @@
       }
 
       .button-container {
-        display: flex;
-        justify-content: center;
-        gap: 20px;
-        margin: 30px 0;
-        flex-wrap: wrap;
-      }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  margin: 30px 0;
+}
+
+@media (min-width: 768px) {
+  .button-container {
+    flex-direction: row;
+  }
+}
 
       .button-container a {
         background-color: #000;
