--- a/index.html
+++ b/index.html
@@ -20,18 +20,19 @@
       }
 
       .button-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 15px;
-  margin: 30px 0;
-}
+        display: flex;
+        flex-direction: column; /* Vertikal di mobile */
+        align-items: center;
+        gap: 15px;
+        margin: 30px 0;
+      }
 
-@media (min-width: 768px) {
-  .button-container {
-    flex-direction: row;
-  }
-}
+      @media (min-width: 768px) {
+        .button-container {
+          flex-direction: row; /* Horizontal di desktop */
+          justify-content: center;
+        }
+      }
 
       .button-container a {
         background-color: #000;
