--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
         margin: 30px 0;
       }
 
-      @media (min-width: 768px) {
-        .button-container {
-          flex-direction: row; /* Horizontal di desktop */
-          justify-content: center;
-        }
-      }
+      @media (max-width: 768px) {
+  .button-container a {
+    width: 80%;
+    text-align: center;
+  }
+}
+
 
       .button-container a {
         background-color: #000;
