--- a/index.html
+++ b/index.html
@@ -36,13 +36,16 @@
 
 
       .button-container a {
-        background-color: #000;
-        color: #fff;
-        padding: 12px 24px;
-        text-decoration: none;
-        border-radius: 8px;
-        transition: background-color 0.3s;
-      }
+  background-color: #000;
+  color: #fff;
+  padding: 12px 24px;
+  text-decoration: none;
+  border-radius: 8px;
+  transition: background-color 0.3s;
+  width: 250px; /* lebar seragam */
+  text-align: center;
+}
+
 
       .button-container a:hover {
         background-color: #333;
