--- a/index.html
+++ b/index.html
@@ -28,24 +28,23 @@
       }
 
       @media (max-width: 768px) {
-  .button-container a {
-    width: 80%;
-    text-align: center;
-  }
-}
-
+        .button-container a {
+          width: 80%;
+          text-align: center;
+        }
+      }
 
       .button-container a {
-  background-color: #000;
-  color: #fff;
-  padding: 12px 24px;
-  text-decoration: none;
-  border-radius: 8px;
-  transition: background-color 0.3s;
-  width: 850px; /* lebar seragam */
-  text-align: center;
-}
-
+        background-color: #000;
+        color: #fff;
+        padding: 12px 24px;
+        text-decoration: none;
+        border-radius: 8px;
+        transition: background-color 0.3s;
+        width: 850px; /* lebar seragam */
+        text-align: center;
+        font-size: 80px; /* ukuran teks lebih besar */
+      }
 
       .button-container a:hover {
         background-color: #333;
