--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     </header>
 
     <div class="button-container">
-      <a href="https://maps.app.goo.gl/zPNjq5hGaSkjmGxd7"><i class="fas fa-map-marker-alt"></i> Hairness Samarinda</a>
+      <a href="https://maps.app.goo.gl/zPNjq5hGaSkjmGxd7"><i class="fas fa-map-marker-alt"></i> Lokasi Hairness Samarinda</a>
       <a href="#tentang"><i class="fas fa-info-circle"></i> Tentang Kami</a>
-      <a href="https://wa.me/6282255553833"><i class="fab fa-whatsapp"></i> Kontak</a>
+      <a href="https://wa.me/6282255553833"><i class="fab fa-whatsapp"></i> Kontak Kami</a>
     </div>
 
     <footer>
