--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
         background-color: #333;
       }
 
+      .promo-image {
+        max-width: 100%;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+        padding: 20px 0;
+      }
+
       footer {
         background-color: #111;
         color: #fff;
@@ -83,6 +91,12 @@
       <a href="#tentang"><i class="fas fa-info-circle"></i> Tentang Kami</a>
       <a href="https://wa.me/6282255553833"><i class="fab fa-whatsapp"></i> Kontak Kami</a>
     </div>
+
+    <!-- Gambar Promo Ditambahkan di Sini -->
+    <img 
+      src="https://github.com/hairness-dev/hairness-dev.github.io/blob/main/Grey%20Modern%20Illustrative%20Product%20Promotion%20Instagram%20Post%2088.png?raw=true" 
+      alt="Promo Hairness" 
+      class="promo-image">
 
     <footer>
       &copy; 2025 Hairness. Dibuat dengan ❤️ oleh <a href="https://instagram.com/yourbrand" target="_blank">@hairness</a>
