--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
     <img 
       src="https://github.com/hairness-dev/hairness-dev.github.io/blob/main/Grey%20Modern%20Illustrative%20Product%20Promotion%20Instagram%20Post%2088.png?raw=true" 
       alt="Promo Hairness" 
-      class="promo-image">
+      class="promo-image"
+      style="margin-top: 50px;"> 
 
     <footer>
       &copy; 2025 Hairness. Dibuat dengan ❤️ oleh <a href="https://instagram.com/yourbrand" target="_blank">@hairness</a>
