--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
         background-color: #333;
       }
 
-      .promo-video {
-        display: block;
-        margin: 50px auto 0 auto;
+      .promo-image {
         max-width: 100%;
-        width: 850px;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+        padding: 20px 0;
       }
 
       footer {
@@ -91,11 +92,12 @@
       <a href="https://wa.me/6282255553833"><i class="fab fa-whatsapp"></i> Kontak Kami</a>
     </div>
 
-    <!-- Video Promo -->
-    <video class="promo-video" controls autoplay muted>
-      <source src="https://raw.githubusercontent.com/hairness-dev/hairness-dev.github.io/main/Grey-Modern-Illustrative-Product-Promotion-Instagram-Post.mp4" type="video/mp4">
-      Browser Anda tidak mendukung pemutaran video.
-    </video>
+    <!-- Gambar Promo Ditambahkan di Sini -->
+    <img 
+      src="https://github.com/hairness-dev/hairness-dev.github.io/blob/main/Grey%20Modern%20Illustrative%20Product%20Promotion%20Instagram%20Post%2088.png?raw=true" 
+      alt="Promo Hairness" 
+      class="promo-image"
+      style="margin-top: 50px;"> 
 
     <footer>
       &copy; 2025 Hairness. Dibuat dengan ❤️ oleh <a href="https://instagram.com/yourbrand" target="_blank">@hairness</a>
