--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <!-- Gambar Promo Ditambahkan di Sini -->
     <img 
-      src="https://github.com/hairness-dev/hairness-dev.github.io/blob/main/Grey%20Modern%20Illustrative%20Product%20Promotion%20Instagram%20Post%2088.png?raw=true" 
+      src="https://github.com/hairness-dev/hairness-dev.github.io/blob/main/Grey%20Modern%20Illustrative%20Product%20Promotion%20Instagram%20Post%20(2).png?raw=true" 
       alt="Promo Hairness" 
       class="promo-image"
       style="margin-top: 50px;"> 
